[package]
name = "kkdlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "kkdlib"
crate-type = ["lib", "cdylib"]

[dependencies]
bitfields = "1.0"
bitflags = "2.10"
block_compression = { version = "0.7", optional = true }
directxtex = { version = "1.3", optional = true }
image = { version = "0.25", default-features = false, optional = true }
libdeflate-sys = "1.25"
pollster = { version = "0.4", optional = true }
pyo3 = { version = "0.27", features = ["abi3-py39", "extension-module", "generate-import-lib"], optional = true }
wgpu = { version = "27.0", default-features = false, optional = true, features = ["gles", "metal", "parking_lot", "std", "vulkan"] }

[build-dependencies]
cc = "1.2"
libdeflate-sys = "1.25"

[features]
default = ["wgpu"]
directxtex = ["dep:directxtex"]
pyo3 = ["dep:pollster", "dep:pyo3"]
wgpu = ["dep:block_compression", "dep:image", "dep:wgpu"]

[profile.release]
codegen-units = 1
lto = true
strip = true
