[package]
name = "kkdlib"
version = "0.1.0"
edition = "2024"

[lib]
name = "kkdlib"
crate-type = ["lib", "cdylib"]

[dependencies]
bitfields = "1"
bitflags = "2"
image = { version = "0.25", default-features = false }
libdeflate-sys = "1.25"
parking_lot = { version = "0.12", optional = true }
pyo3 = { version = "0.27", features = ["abi3-py39", "extension-module", "generate-import-lib"], optional = true }

[build-dependencies]
cc = "1.2"
libdeflate-sys = "1.25"
ispc = "2.0"

[features]
default = ["parking_lot"]
parking_lot = ["dep:parking_lot"]
pyo3 = ["dep:pyo3"]

[profile.release]
lto = true
strip = true
panic = "abort"
